ctfd_manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ctfd
  namespace: ctfd-space
spec:  
  selector:
    matchLabels:
      app: ctfd
  replicas: 1
  template:
    metadata:
      labels:
        app: ctfd
        name: ctfd
    spec:
      containers:
        - name: ctfd
          image: tolorid/ctfd:v1.1
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
          ports:
            - containerPort: 8000
